--- a/humidity_page.html
+++ b/humidity_page.html
@@ -6,7 +6,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <title>Wed-Design-Challenge</title>
+        <title>WDC - Latitude vs. Humidity</title>
         
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" type="text/css" href="style.css">
